@@ -2,6 +2,7 @@ CHANGELOG XX XXXX 2010 Pierre Frisch
 Rev the source code to 3.1.8
 JmDNS fails to get ServiceInfo from cache - ID: 3018122
 Avahi DNS entries lost after an hour - ID: 3015920
+No IPv6 address returned by getAddress - ID: 1952439
 
 CHANGELOG 10 June 2010 Pierre Frisch
 Rev the source code to 3.1.7
